--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
       <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
+      <input type="button" value="Deposit" id="cDepositButton" />
       <input type="button" value="Withdraw" />
     </div>
 
@@ -26,7 +26,8 @@
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
-
+    <script src="
+https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
