--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input type="text" placeholder="enter an amount" id = 'checking_input'/>
+      <input type="button" value="Deposit" id = "checking_deposit"/>
+      <input type="button" value="Withdraw" id = "checking_withdraw"/>
     </div>
 
     <div class="account">
@@ -26,7 +26,7 @@
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
