refactored function so it works to make deposit for both accounts, rather than writing a second function

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <div class="account">
       <h2>Checking</h2>
       <div id="checkingBalance" class="balance">$0</div>
-      <input id="moneyInTheBank" type="text" placeholder="enter an amount" />
-      <input id="checkingAddMoney" type="button" value="Deposit" />
+      <input class="moneyInTheBank" type="text" placeholder="enter an amount" />
+      <input id="checkingAddMoney" class="depositButton" type="button" value="Deposit" />
       <input id="checkingGimmeMoney" type="button" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
       <div id="SavingsBalance" class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input id="savingsAddMoney" type="button" value="Deposit" />
+      <input class="moneyInTheBank" type="text" placeholder="enter an amount" />
+      <input id="savingsAddMoney" class="depositButton" type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
