Added function for both savings and checking withdrawal

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div id="checkingBalance" class="balance">$0</div>
       <input class="moneyInTheBank" type="text" placeholder="enter an amount" />
       <input id="checkingAddMoney" class="depositButton" type="button" value="Deposit" />
-      <input id="checkingGimmeMoney" type="button" value="Withdraw" />
+      <input id="withdrawFromChecking" class="withdrawalButton" type="button" value="Withdraw" />
     </div>
 
     <div class="account">
@@ -24,7 +24,7 @@
       <div id="SavingsBalance" class="balance">$0</div>
       <input class="moneyInTheBank" type="text" placeholder="enter an amount" />
       <input id="savingsAddMoney" class="depositButton" type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input id="withdrawFromSavings" class="withdrawalButton" type="button" value="Withdraw" />
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="atm.js"></script>
