added overdraft protection

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="account">
       <h2>Savings</h2>
-      <div id="SavingsBalance" class="balance">$0</div>
+      <div id="savingsBalance" class="balance">$0</div>
       <input class="moneyInTheBank" type="text" placeholder="enter an amount" />
       <input id="savingsAddMoney" class="depositButton" type="button" value="Deposit" />
       <input id="withdrawFromSavings" class="withdrawalButton" type="button" value="Withdraw" />
