--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div class="account">
       <h2>Savings</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input type="text" placeholder="enter an amount" id = 'savings_input'/>
+      <input type="button" value="Deposit" id = 'savings_deposit'/>
+      <input type="button" value="Withdraw" id = 'savings_withdraw' />
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="atm.js"></script>
