followed same format for withdraw button functionality

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="balance" id="checkingBalance">$0</div>
       <input type="text" placeholder="enter an amount" id="cplaceholder"/>
       <input type="button" value="Deposit" id="cDepositButton" />
-      <input type="button" value="Withdraw" />
+      <input type="button" value="Withdraw" id="cWithdrawButton"/>
     </div>
 
     <div class="account">
