--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance" id="sBal">$0</div>
+      <input type="text" placeholder="enter an amount" id="sAmt"/>
+      <input type="button" value="Deposit" id="sDepositButton"/>
+      <input type="button" value="Withdraw"id="sWithdrawButton" />
     </div>
     <script src="
 https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
