added checking deposit and withdraw button functions

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance" id="checkingBalance" >$0</div>
+      <input type="text" placeholder="enter an amount" id="cUserInput" />
+      <input type="button" value="Deposit" id="cDepositButton"/>
+      <input type="button" value="Withdraw" id="cWithdrawButton"/>
     </div>
 
     <div class="account">
