both chkng and svng can deposit and withdraw

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance" id="sBal">$0</div>
-      <input type="text" placeholder="enter an amount" id="sAmt"/>
+      <div class="balance" id="savingsBalance">$0</div>
+      <input type="text" placeholder="enter an amount" id="splaceholder"/>
       <input type="button" value="Deposit" id="sDepositButton"/>
       <input type="button" value="Withdraw"id="sWithdrawButton" />
     </div>
