--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
