--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance" id="checkingBalance" >$0</div>
-      <input type="text" placeholder="enter an amount" id="cUserInput" />
+      <div class="balance" id="checkingBalance">$0</div>
+      <input type="text" placeholder="enter an amount" id="cUserInput"/>
       <input type="button" value="Deposit" id="cDepositButton"/>
       <input type="button" value="Withdraw" id="cWithdrawButton"/>
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance" id="savingsBalance">$0</div>
+      <input type="text" placeholder="enter an amount" id="sUserInput"/>
+      <input type="button" value="Deposit" id="sDepositButton"/>
+      <input type="button" value="Withdraw" id="sWithdrawButton"/>
     </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="atm.js"></script>
