--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <div class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input id="input" type="text" placeholder="enter an amount" />
+      <input id="deposit" type="button" value="Deposit" />
+      <input id="withdraw" type="button" value="Withdraw" />
     </div>
-
+<!-- ************************************ 
     <div class="account">
       <h2>Savings</h2>
       <div class="balance">$0</div>
@@ -26,7 +26,8 @@
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
-
+   ************************************ -->    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
