added ids to input boxes

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
+      <div class="checking_balance">$0</div>
+      <input id="checkingInput" type="text" placeholder="enter an amount" />
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
+      <div class="savings_balance">$0</div>
+      <input id="savingsInput" type="text" placeholder="enter an amount" />
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
