--- a/index.html
+++ b/index.html
@@ -1,32 +1,37 @@
 <!doctype html>
 <html>
-  <head>
-    <title>ATM</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="atm.css">
-  </head>
-  <body>
-    <div class="header">
-      <div><img src="ga.png" /></div>
-      <div class="title">Bank of GA</div>
-    </div>
-    
-    <div class="account">
-      <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
-    </div>
+<head>
+	<title>ATM</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="atm.css">
+</head>
+<body>
+	<!-- Header & Logo -->
+	<div class="header">
+		<div><img src="ga.png" /></div>
+		<div class="title">Bank of GA</div>
+	</div>
 
-    <div class="account">
-      <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
-    </div>
+	<!-- Checking Account -->
+	<div id="checkingAccount" class="account">
+		<h2>Checking</h2>
+		<div id="checkingBalance" class="balance">$0</div>
+		<input id="checkingInput" type="text" placeholder="Enter an amount."/>
+		<input id="addToChecking" type="button" value="Deposit"/>
+		<input type="button" value="Withdraw"/>
+	</div>
 
-    <script src="atm.js"></script>
-  </body>
+	<!-- Savings Account -->
+	<div id="savingsAccount" class="account">
+		<h2>Savings</h2>
+		<div id="savingsBalance" class="balance">$0</div>
+		<input id="savingsInput" type="text" placeholder="Enter an amount."/>
+		<input id="addToSavings" type="button" value="Deposit"/>
+		<input type="button" value="Withdraw"/>
+	</div>
+	
+	<!-- JavaScript -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="atm.js"></script>
+</body>
 </html>
