--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="zero balance" id="checking_balance">$0</div>
+      <input type="text" placeholder="enter an amount" id="checking_amount"/>
+      <input type="button" value="Deposit" id="checking_deposit" />
+      <input type="button" value="Withdraw" id="checking_withdraw"/>
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="zero balance" id="savings_balance">$0</div>
+      <input type="text" placeholder="enter an amount" id="savings_amount"/>
+      <input type="button" value="Deposit" id="savings_deposit" />
+      <input type="button" value="Withdraw" id="savings_withdraw" />
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
