Added new id names.

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 	</div>
 
 	<!-- Checking Account -->
-	<div id="checkingAccount" class="account">
+	<div class="account">
 		<h2>Checking</h2>
 		<div id="checkingBalance" class="balance">$0</div>
 		<input id="checkingInput" type="text" placeholder="Enter an amount."/>
 		<input id="addToChecking" type="button" value="Deposit"/>
-		<input type="button" value="Withdraw"/>
+		<input id="withdrawFromChecking" type="button" value="Withdraw"/>
 	</div>
 
 	<!-- Savings Account -->
-	<div id="savingsAccount" class="account">
+	<div class="account">
 		<h2>Savings</h2>
 		<div id="savingsBalance" class="balance">$0</div>
 		<input id="savingsInput" type="text" placeholder="Enter an amount."/>
 		<input id="addToSavings" type="button" value="Deposit"/>
-		<input type="button" value="Withdraw"/>
+		<input id="withdrawFromSavings" type="button" value="Withdraw"/>
 	</div>
 	
 	<!-- JavaScript -->
