--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
-    <div class="account">
+
+    <div class="account" id="checking">
       <h2>Checking</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input type="text" placeholder="enter an amount" class="amount"/>
+      <input type="button" value="Deposit" class="deposit" />
+      <input type="button" value="Withdraw" class="withdrawl" />
     </div>
 
-    <div class="account">
+    <div class="account" id="savings">
       <h2>Savings</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input type="text" placeholder="enter an amount" class="amount"/>
+      <input type="button" value="Deposit" class="depost"/>
+      <input type="button" value="Withdraw" class="withdrawl"/>
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
