--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
       <div class="balance">$0</div>
       <input type="text" placeholder="enter an amount" class="amount"/>
       <input type="button" value="Deposit" class="deposit" />
-      <input type="button" value="Withdraw" class="withdrawl" />
+      <input type="button" value="Withdraw" class="withdrawal" />
     </div>
 
     <div class="account" id="savings">
       <h2>Savings</h2>
       <div class="balance">$0</div>
       <input type="text" placeholder="enter an amount" class="amount"/>
-      <input type="button" value="Deposit" class="depost"/>
-      <input type="button" value="Withdraw" class="withdrawl"/>
+      <input type="button" value="Deposit" class="deposit"/>
+      <input type="button" value="Withdraw" class="withdrawal"/>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
