--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
       <div class="title">Bank of GA</div>
     </div>
 
-    <div class="account" id="checking">
+    <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" class="amount"/>
-      <input type="button" value="Deposit" class="deposit" />
-      <input type="button" value="Withdraw" class="withdrawal" />
+      <div class="balance" id="checkingBalance">$0</div>
+      <input type="text" placeholder="enter an amount" id="checkingAmount"/>
+      <input type="button" value="Deposit" id="checkingDeposit" />
+      <input type="button" value="Withdraw" id="checkingWithdrawal" />
     </div>
 
-    <div class="account" id="savings">
+    <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" class="amount"/>
-      <input type="button" value="Deposit" class="deposit"/>
-      <input type="button" value="Withdraw" class="withdrawal"/>
+      <div class="balance" id="savingsBalance">$0</div>
+      <input type="text" placeholder="enter an amount" id="savingsAmount"/>
+      <input type="button" value="Deposit" id="savingsDeposit">
+      <input type="button" value="Withdraw" id="savingsWithdrawal"/>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
