completed deposit() to take deposit from checkings and savings; added local jQuery.js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
+      <div id="checkBalanceWindow" class="balance">$0</div>
       <input id="checkingInput" type="text" placeholder="enter an amount" />
       <input id="checkDepositButton" type="button" value="Deposit" />
       <input id="checkWithdrawButton" type="button" value="Withdraw" />
@@ -21,13 +21,13 @@
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
+      <div id="checkBalanceWindow" class="balance">$0</div>
       <input id="savingsInput" type="text" placeholder="enter an amount" />
       <input id="saveDepositButton" type="button" value="Deposit" />
       <input id="saveWithdrawButton" type="button" value="Withdraw" />
     </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+  <script src="jquery-2.1.4.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
