--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
     
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input id="input" type="text" placeholder="enter an amount" />
-      <input id="deposit" type="button" value="Deposit" />
-      <input id="withdraw" type="button" value="Withdraw" />
+      <div id="chBalance" class="balance">$0</div>
+      <input id="chInput" type="text" placeholder="enter an amount" />
+      <input id="chDeposit" type="button" value="Deposit" />
+      <input id="chWithdraw" type="button" value="Withdraw" />
     </div>
-<!-- ************************************ 
+
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div id="savBalance" class="balance">$0</div>
+      <input id="savInput"type="text" placeholder="enter an amount" />
+      <input id ="savDeposit" type="button" value="Deposit" />
+      <input id="savWithdraw" type="button" value="Withdraw" />
     </div>
-   ************************************ -->    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="atm.js"></script>
+    <script src="untitled.js"></script>
   </body>
 </html>
