balanceWindow() completed; fixed error in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="account">
       <h2>Savings</h2>
-      <div id="checkBalanceWindow" class="balance">$0</div>
+      <div id="saveBalanceWindow" class="balance">$0</div>
       <input id="savingsInput" type="text" placeholder="enter an amount" />
       <input id="saveDepositButton" type="button" value="Deposit" />
       <input id="saveWithdrawButton" type="button" value="Withdraw" />
