--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <input type="button" value="Withdraw" />
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
