officially working ATM, better than real XD

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </div>
     
     <div class="account">
-      <h2>Checking</h2>
+      <h2 id="chHeader">Checking</h2>
       <div id="chBalance" class="balance">$0</div>
       <input id="chInput" type="text" placeholder="enter an amount" />
       <input id="chDeposit" type="button" value="Deposit" />
