--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
       <div class="balance" id="balanceField">$0</div>
       <input id="textField" type="text" placeholder="enter an amount" />
       <input id="depositButton" type="button" value="Deposit" />
-      <input id="withdrawlButton" type="button" value="Withdraw" />
+      <input id="withdrawButton" type="button" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance" id="savingsBalanceField">$0</div>
+      <input id="savingsTextField" type="text" placeholder="enter an amount" />
+      <input id="savingsDepositButton" type="button" value="Deposit" />
+      <input id="savingsWithdrawButton" type="button" value="Withdraw" />
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
