--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script src="untitled.js"></script>
+    <script src="real_atm.js"></script>
   </body>
 </html>
