--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="cBalance" >$0</div>
+      <input type="text" class="input" placeholder="enter an amount" />
+      <input type="button" class="cdepositButton" value="Deposit" />
+      <input type="button" class="cwithdrawalButton" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="sBalance">$0</div>
+      <input type="text" class="input" placeholder="enter an amount" />
+      <input type="button" class="sdepositButton" value="Deposit" />
+      <input type="button" id="swithdrawal" value="Withdraw" />
     </div>
 
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
