changed checking_balance and savings_balance to ids from classes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="account">
       <h2>Checking</h2>
-      <div class="checking_balance balance zero">$0</div>
+      <div class="balance zero" id="checking_balance">$0</div>
       <input id="checkingInput" type="text" placeholder="enter an amount" />
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
@@ -21,7 +21,7 @@
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="savings_balance balance zero">$0</div>
+      <div class="balance zero" id="savings_balance">$0</div>
       <input id="savingsInput" type="text" placeholder="enter an amount" />
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
