--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
 
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
+      <div id="checking_balance" class="balance">$0</div>
+      <input class="checkingAmount" type="text" placeholder="enter an amount" />
       <input class="checkingDeposit" type="button" value="Deposit" />
       <input class="checkingWithdrawal" type="button" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
+      <div id="savings_balance" class="balance">$0</div>
+      <input class="savingsAmount" type="text" placeholder="enter an amount" />
       <input class="savingsDeposit" type="button" value="Deposit" />
       <input class="savingsWithdrawal" type="button" value="Withdraw" />
     </div>
