added display to all buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
+      <div class="balance" id="checkingDisplay">$0</div>
       <input type="text" id="checkingInput" placeholder="enter an amount" />
       <input type="button" id="depositCheckingButton" value="Deposit" />
       <input type="button" id="withdrawCheckingButton" value="Withdraw" />
@@ -21,7 +21,7 @@
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
+      <div class="balance" id="savingsDisplay">$0</div>
       <input type="text" id="savingsInput" placeholder="enter an amount" />
       <input type="button" id="depositSavingsButton" value="Deposit" />
       <input type="button" id="withdrawSavingsButton" value="Withdraw" />
