--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-
     <div class="account">
       <h2>Checking</h2>
       <div id="cBalance" class="balance">$0</div>
@@ -24,7 +23,7 @@
       <div id="sBalance" class="balance">$0</div>
       <input id="sField" type="text" placeholder="enter an amount" />
       <input id="sDepositButton" type="button" value="Deposit" />
-      <input id="cWithdrawButton" type="button" value="Withdraw" />
+      <input id="sWithdrawButton" type="button" value="Withdraw" />
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="atm.js"></script>
