--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>ATM</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="atm.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js" defer></script>
+    <script src="atm.js" defer></script>
+    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
   </head>
   <body>
     <div class="header">
@@ -26,7 +29,9 @@
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
-
-    <script src="atm.js"></script>
   </body>
 </html>
+
+<!-- As a user, I want to deposit money into one of the bank accounts
+As a user, I want to withdraw money from one of the bank accounts
+Make sure the balance in an account can't go negative. If a user tries to withdraw more money than exists in the account, ignore the transaction. -->
