--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance" id="checking">$0</div>
+      <input type="text" id="inputChecking" placeholder="enter an amount" />
+      <input type="button" id="checkingDeposit" value="Deposit" />
+      <input type="button" id="checkingWithdrawal" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance" id="savings">$0</div>
+      <input type="text" id="inputSavings" placeholder="enter an amount" />
+      <input type="button" id="savingsDeposit" value="Deposit" />
+      <input type="button" id="savingsWithdrawal" value="Withdraw" />
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
