--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     <div class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input id="cInput" type="text" placeholder="enter an amount" />
+      <input id="cDeposit" type="button" value="Deposit" />
+      <input id="cWithdraw" type="button" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input id="sInput" type="text" placeholder="enter an amount" />
+      <input id="sDeposit" type="button" value="Deposit" />
+      <input id="sWithdraw" type="button" value="Withdraw" />
     </div>
   </body>
 </html>
