deposit and withdrawal fixed error

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <div class="account">
       <h2>Savings</h2>
       <div class="sBalance">$0</div>
-      <input type="text" class="input" placeholder="enter an amount" />
+      <input type="text" class="sInput" placeholder="enter an amount" />
       <input type="button" class="sdepositButton" value="Deposit" />
-      <input type="button" id="swithdrawal" value="Withdraw" />
+      <input type="button" class="swithdrawalButton" value="Withdraw" />
     </div>
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
