--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
+      <div class="checking_balance">$0</div>
       <input type="text" placeholder="enter an amount" />
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
@@ -21,12 +21,12 @@
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
+      <div class="savings_balance">$0</div>
       <input type="text" placeholder="enter an amount" />
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
