overdraft protection activated

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="account">
       <h2>Checking</h2>
-      <div id="checking_balance" class="balance">$0</div>
+      <div class="balance" id="checking_balance">$0</div>
       <input class="checkingAmount" type="text" placeholder="enter an amount" />
       <input class="checkingDeposit" type="button" value="Deposit" />
       <input class="checkingWithdrawal" type="button" value="Withdraw" />
@@ -21,7 +21,7 @@
 
     <div class="account">
       <h2>Savings</h2>
-      <div id="savings_balance" class="balance">$0</div>
+      <div class="balance" id="savings_balance">$0</div>
       <input class="savingsAmount" type="text" placeholder="enter an amount" />
       <input class="savingsDeposit" type="button" value="Deposit" />
       <input class="savingsWithdrawal" type="button" value="Withdraw" />
