created color changes to backrounds on overdraft

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="title">Bank of GA</div>
     </div>
 
-    <div class="account">
+    <div class="checkingAccount">
       <h2>Checking</h2>
       <div class="balance" id="checking_balance">$0</div>
       <input class="checkingAmount" type="text" placeholder="enter an amount" />
@@ -19,7 +19,7 @@
       <input class="checkingWithdrawal" type="button" value="Withdraw" />
     </div>
 
-    <div class="account">
+    <div class="savingsAccount">
       <h2>Savings</h2>
       <div class="balance" id="savings_balance">$0</div>
       <input class="savingsAmount" type="text" placeholder="enter an amount" />
