--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="account">
       <h2>Checking</h2>
       <div id="checking_balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
+      <input id="checking_deposit" type="text" placeholder="enter an amount" />
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
