savings deposit working

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="account">
       <h2>Savings</h2>
       <div id="savings_balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
+      <input id="savings_deposit" type="text" placeholder="enter an amount" />
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
