added index.html for jquery script

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
@@ -27,6 +27,7 @@
       <input type="button" value="Withdraw" />
     </div>
 
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
