--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
   <body>
     <div class="header">
       <div><img src="ga.png" /></div>
-      <div class="title">Bank of GA</div>
+      <div class="title">Bank of <b>GA</b></div>
     </div>
-    
-    <div class="account">
+
+    <div class="account" id="checking">
       <h2>Checking</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input type="text" class='balanceinput' placeholder="enter an amount" />
+      <input type="button" class='depositbtn' value="Deposit" />
+      <input type="button" class='withdrawbtn' value="Withdraw" />
     </div>
 
-    <div class="account">
+    <div class="account" id="saving">
       <h2>Savings</h2>
       <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <input type="text" class='balanceinput' placeholder="enter an amount" />
+      <input type="button" class='depositbtn' value="Deposit" />
+      <input type="button" class='withdrawbtn' value="Withdraw" />
     </div>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
