--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance checking zero">$0</div>
+      <input class ="depositInput" type="text" placeholder="enter an amount" />
+      <input class ="depositButton" type="button" value="Deposit" />
+      <input class ="depositWithdraw" type="button" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance saving zero">$0</div>
+      <input class ="savingsInput" type="text" placeholder="enter an amount" />
+      <input class="savingsDepositButton" type="button" value="Deposit" />
+      <input class="savingsDepositWithdraw" type="button" value="Withdraw" />
     </div>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
