deposit, withdraw and display on the screen

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
       <h2>Checking</h2>
       <div class="balance" id="checkingBalance">$0</div>
       <input class="checkingInputAmount" type="text" placeholder="enter an amount" />
-      <input class="checkingDeposit" type="button" value="Deposit" />
-      <input class="checkingWithdraw" type="button" value="Withdraw" />
+      <input class="checkingDepositButton" type="button" value="Deposit" />
+      <input class="checkingWithdrawButton" type="button" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
       <div class="balance" id="savingBalance">$0</div>
       <input class="savingInputAmount" type="text" placeholder="enter an amount" />
-      <input class="savingDeposit" type="button" value="Deposit" />
-      <input class="savingWithdraw" type="button" value="Withdraw" />
+      <input class="savingDepositButton" type="button" value="Deposit" />
+      <input class="savingWithdrawButton" type="button" value="Withdraw" />
     </div>
 
     <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
