in jquery, works without overdraft protection

--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance checking">$0</div>
+      <input class="checkingInput" placeholder="enter an amount"/>
+      <input class="checkingDepositButton" type="button" value="Checking Deposit"/>
+      <input class="checkingWithdrawalButton" type="button" value="Checking Withdrawal"/>
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance savings">$0</div>
+      <input class="savingsInput" placeholder="enter an amount"/>
+      <input class="savingsDepositButton" type="button" value="Savings Deposit"/>
+      <input class="savingsWithdrawalButton" type="button" value="Savings Withdrawal"/>
     </div>
-
+    <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
