finished hw to my solution branch

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance" id="checkingBalance">$0</div>
+      <div class="balance checking" id="checkingBalance">$0</div>
       <input class="checkingInput" type="text" placeholder="enter an amount" />
       <input class="checkingDeposit" type="button" value="Deposit" />
       <input class="checkingWithdraw" type="button" value="Withdraw" />
@@ -22,7 +22,7 @@
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance" id="savingBalance">$0</div>
+      <div class="balance saving" id="savingBalance">$0</div>
       <input class="savingInput" type="text" placeholder="enter an amount" />
       <input class="savingDeposit" type="button" value="Deposit" />
       <input class="savingWithdraw" type="button" value="Withdraw" />
