functional with a couple bugs

--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance" id="check-bal">$0</div>
+      <input type="text" id="check-field" placeholder="enter an amount" />
+      <input type="button" id="check-dep-button" value="Deposit" />
+      <input type="button" id="check-with-button" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance" id = "save-bal">$0</div>
+      <input type="text" id="save-field" placeholder="enter an amount" />
+      <input type="button" id="save-dep-button" value="Deposit" />
+      <input type="button" id="save-with-button" value="Withdraw" />
     </div>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
