--- a/index.html
+++ b/index.html
@@ -10,23 +10,24 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div id="checking_balance" class="balance">$0</div>
+      <input id="checking_amount" type="text" placeholder="enter an amount" />
+      <input id="checking_deposit" type="button" value="Deposit" />
+      <input id= "withdrawal" type="button" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
+      <div id = "saving_amount" class="balance">$0</div>
+      <input id = "savingAmount" type="text" placeholder="enter an amount" />
+      <input id="saving_deposit" type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
