--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance" id="checking_balance">$0</div>
+      <input id="checkingInput" type="text" placeholder="enter an amount" />
+      <input type="button" id="depositCheckingButton" value="Deposit" />
+      <input type="button" id="withdrawCheckingButton" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance" id="saving_balance">$0</div>
+      <input id="savingInput" type="text" placeholder="enter an amount" />
+      <input type="button" id="depositSavingButton" value="Deposit" />
+      <input type="button" id="withdrawSavingButton" value="Withdraw" />
     </div>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
