--- a/index.html
+++ b/index.html
@@ -10,23 +10,25 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
+      <div id="checkBal" class="balance">$0</div>
+      <input id="checkInput" type="text" placeholder="enter an amount" />
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
+      <div id="saveBal" class="balance">$0</div>
+      <input id="saveInput" type="text" placeholder="enter an amount" />
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
-
-    <script src="atm.js"></script>
   </body>
+
+  <!-- Script Files Go HERE -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+  <script src="atm.js"></script>
 </html>
