fixed independent red indicators

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="title">Bank of GA</div>
     </div>
 
-    <div class="account">
+    <div class="checkingAccount">
       <h2>Checking</h2>
       <div class="balance" id="checking">$0</div>
       <input type="text" id="inputChecking" placeholder="enter an amount" />
@@ -19,7 +19,7 @@
       <input type="button" id="checkingWithdrawal" value="Withdraw" />
     </div>
 
-    <div class="account">
+    <div class="savingsAccount">
       <h2>Savings</h2>
       <div class="balance" id="savings">$0</div>
       <input type="text" id="inputSavings" placeholder="enter an amount" />
