--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
 
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">0.00</div>
-      <input type="text" class="Ctext" placeholder="enter an amount" />
-      <input type="button" class="Cdepbutton" value="Deposit" />
-      <input type="button" class="Cwdbutton" value="Withdraw" />
+      <div id="c-balance">0.00</div>
+      <input type="text" id="c-text" placeholder="enter an amount" />
+      <input type="button" id="c-depbtn" value="Deposit" />
+      <input type="button" id="c-wdbtn" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">0.00</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div id="s-balance">0.00</div>
+      <input type="text" id="s-text" placeholder="enter an amount" />
+      <input type="button" id="s-depbtn" value="Deposit" />
+      <input type="button" id="s-wdbtn" value="Withdraw" />
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <script src="atm.js"></script>
