--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance zero" id="checkingBalanceDiv">$0</div>
+      <input type="text" id="checkingAmount" placeholder="enter an amount" />
+      <input type="button" id="checkingDepositButton" value="Deposit" />
+      <input type="button" id="checkingWithdrawalButton" value="Withdraw" />
     </div>
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
+      <div class="balance zero" id="savingsBalanceDiv">$0</div>
+      <input type="text" id="savingsAmount" placeholder="enter an amount" />
+      <input type="button" id="savingsDepositButton" value="Deposit" />
+      <input type="button" id="savingsWithdrawalButton" value="Withdraw" />
     </div>
 
     <script src="atm.js"></script>
