--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
@@ -26,7 +26,7 @@
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
     </div>
-
+    <script src="https://code.jquery.com/jquery-2.2.1.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
