How to get elements?

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
       <div><img src="ga.png" /></div>
       <div class="title">Bank of GA</div>
     </div>
-    
-    <div class="account">
+
+    <div id="checking_account"
+    class="account">
       <h2>Checking</h2>
       <div class="balance">$0</div>
       <input type="text" placeholder="enter an amount" />
@@ -19,7 +20,7 @@
       <input type="button" value="Withdraw" />
     </div>
 
-    <div class="account">
+    <div id="savings_account" class="account">
       <h2>Savings</h2>
       <div class="balance">$0</div>
       <input type="text" placeholder="enter an amount" />
@@ -27,6 +28,7 @@
       <input type="button" value="Withdraw" />
     </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
