--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance" id="checking_balance">$0</div>
+      <div class="balance zero" id="checking_balance">$0</div>
       <input type="text" id="checking_input" placeholder="enter an amount" />
       <input type="button" id="checking_deposit" value="Deposit" />
       <input type="button" id="checking_withdraw" value="Withdraw" />
@@ -21,7 +21,7 @@
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance" id="savings_balance">$0</div>
+      <div class="balance zero" id="savings_balance">$0</div>
       <input type="text" id="savings_input" placeholder="enter an amount" />
       <input type="button" id="savings_deposit" value="Deposit" />
       <input type="button" id="savings_withdraw" value="Withdraw" />
