saves the amount, doesn't display it

--- a/index.html
+++ b/index.html
@@ -1,32 +1,36 @@
 <!doctype html>
 <html>
-  <head>
-    <title>ATM</title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="atm.css">
-  </head>
-  <body>
-    <div class="header">
-      <div><img src="ga.png" /></div>
-      <div class="title">Bank of GA</div>
-    </div>
-    
-    <div class="account">
-      <h2>Checking</h2>
-      <div class="balance">$0</div>
+<head>
+  <title>ATM</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="atm.css">
+</head>
+<body>
+  <div class="header">
+    <div><img src="ga.png" /></div>
+    <div class="title">Bank of GA</div>
+  </div>
+
+  <div class="account">
+    <h2>Checking</h2>
+    <div class="balance" id="checkingBalance">$0</div>
+    <form id="myChecking">
+      <input type="text" id="newEntry" placeholder="enter an amount" />
+      <input type="button" value="Deposit" />
+      <input type="button" value="Withdraw" />
+    </form>
+  </div>
+
+  <div class="account">
+    <h2>Savings</h2>
+    <div class="balance" id="savingsBalance">$0</div>
+    <form id="mySavings">
       <input type="text" placeholder="enter an amount" />
       <input type="button" value="Deposit" />
       <input type="button" value="Withdraw" />
-    </div>
-
-    <div class="account">
-      <h2>Savings</h2>
-      <div class="balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
-      <input type="button" value="Deposit" />
-      <input type="button" value="Withdraw" />
-    </div>
-
-    <script src="atm.js"></script>
-  </body>
+    </form>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="atm.js"></script>
+</body>
 </html>
