--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
+      <div id='checking-display' class="balance">$0</div>
       <input id="check-input" type="text" placeholder="enter an amount" />
       <input id='checkbtn-d' type="button" value="Deposit" />
       <input id='checkbtn-w'type="button" value="Withdraw" />
