--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
+      <div id='savings-display' class="balance">$0</div>
       <input id="savings-input" type="text" placeholder="enter an amount" />
       <input id='savingsbtn-d' type="button" value="Deposit" />
       <input id='savingsbtn-w' type="button" value="Withdraw" />
