User can deposit into checking and see updated total.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
+      <div class="balance" id="balCheck">$0</div>
       <input type="text" placeholder="enter an amount" id="entCheck"/>
       <input type="button" value="Deposit" id="depCheck"/>
       <input type="button" value="Withdraw" id="witCheck"/>
@@ -21,12 +21,12 @@
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
+      <div class="balance" id="balSave">$0</div>
       <input type="text" placeholder="enter an amount" id="entSave"/>
       <input type="button" value="Deposit" id="depSave"/>
       <input type="button" value="Withdraw" id="withSave"/>
     </div>
-
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
     <script src="atm.js"></script>
   </body>
 </html>
