new input displays properly

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <div class="account">
       <h2>Checking</h2>
-      <div class="balance" id="checking_balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
+      <div class="balance" id="checkingBalance">$0</div>
+      <input type="text" placeholder="enter an amount" id="checkingInput"/>
       <input type="button" value="Deposit" id="checkingDepositButton"/>
       <input type="button" value="Withdraw" id="checkingWithdrawalButton"/>
     </div>
