--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <div class="account">
       <h2>Savings</h2>
-      <div class="balance" id="savings_balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
+      <div class="balance" id="savingsBalance">$0</div>
+      <input type="text" placeholder="enter an amount" id="savingsInput"/>
       <input type="button" value="Deposit" id="savingsDepositButton"/>
       <input type="button" value="Withdraw" id="savingsWithdrawalButton"/>
     </div>
