checking deposit amout adds to total

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div class="account">
     <h2>Checking</h2>
-    <div class="balance" id="checkingBalance" value="0">$0</div>
+    <div class="balance" id="checkingBalance">$0</div>
     <form id="myChecking">
       <input type="text" id="newEntry" placeholder="enter an amount" />
       <input type="button" value="Deposit" class="deposit" />
