fixed checking NaN issue

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2>Checking</h2>
     <div class="balance" id="checkingBalance">$0</div>
     <form id="myChecking">
-      <input type="text" id="newEntry" placeholder="enter an amount" />
+      <input type="text" id="newChecking" placeholder="enter an amount" />
       <input type="button" value="Deposit" class="deposit" />
       <input type="button" value="Withdraw" class="withdraw" />
     </form>
@@ -25,7 +25,7 @@
     <h2>Savings</h2>
     <div class="balance" id="savingsBalance">$0</div>
     <form id="mySavings">
-      <input type="text" placeholder="enter an amount" />
+      <input type="text" id="newSavings" placeholder="enter an amount" />
       <input type="button" value="Deposit" class="deposit" />
       <input type="button" value="Withdraw" class="withdraw" />
     </form>
