functional checking deposit button

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
       <div class="title">Bank of GA</div>
     </div>
 
-    <div class="account" id="checkingAcct">
+    <div class="account">
       <h2>Checking</h2>
-      <div class="balance">$0</div>
+      <div class="balance" id="checkingAcct">$0</div>
       <input type="text" id="checkingAmt" placeholder="enter an amount" />
       <input type="button" id="checkingDeposit" value="Deposit" />
       <input type="button" id="checkingWithdrawal" value="Withdraw" />
     </div>
 
-    <div class="account" id="savingsAcct">
+    <div class="account">
       <h2>Savings</h2>
-      <div class="balance">$0</div>
+      <div class="balance" id="savingsAcct">$0</div>
       <input type="text" id="savingsAmt" placeholder="enter an amount" />
       <input type="button" id="savingsDeposit" value="Deposit" />
       <input type="button" id="savingsWithdrawal" value="Withdraw" />
