added classes and constructor fnc

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   </head>
   <body>
     <div class="header">
-      <div><img src="ga.png" /></div>
+      <div><img src="ga.png"/></div>
       <div class="title">Bank of GA</div>
     </div>
-    
+
     <div class="account">
       <h2>Checking</h2>
+
       <div class="balance">$0</div>
       <input type="text" placeholder="enter an amount" />
       <input type="button" value="Deposit" />
@@ -27,6 +28,9 @@
       <input type="button" value="Withdraw" />
     </div>
 
-    <script src="atm.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!-- <script type="text/javascript" src="plugin.js"></script> -->
+    <script type="text/javascript" src="atm.js"></script>
   </body>
 </html>
