Numbers are being displayed for checking deposit

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="account">
       <h2>Checking</h2>
       <div class="balance" id="checking_balance">$0</div>
-      <input type="text" placeholder="enter an amount" />
+      <input type="text" placeholder="enter an amount" class="checking"/>
       <input type="button" value="Deposit" class="checking-deposit" />
       <input type="button" value="Withdraw" class="checking-withdrawal" />
     </div>
